--- a/css/font-awesome-font-face.css
+++ b/css/font-awesome-font-face.css
@@ -7,12 +7,12 @@
   * -------------------------- */
  @font-face {
    font-family: 'FontAwesome';
-   src: url('/assets/fonts/fontawesome-webfont.eot');
-   src: url('/assets/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
-        url('/assets/fonts/fontawesome-webfont.woff2') format('woff2'),
-        url('/assets/fonts/fontawesome-webfont.woff') format('woff'),
-        url('/assets/fonts/fontawesome-webfont.ttf') format('truetype'),
-        url('/assets/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+   src: url('../assets/fonts/fontawesome-webfont.eot');
+   src: url('../assets/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/fontawesome-webfont.woff2') format('woff2'),
+        url('../assets/fonts/fontawesome-webfont.woff') format('woff'),
+        url('../assets/fonts/fontawesome-webfont.ttf') format('truetype'),
+        url('../assets/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
    font-weight: normal;
    font-style: normal;
  }
