--- a/css/style.css
+++ b/css/style.css
@@ -244,12 +244,6 @@ img {
           box-shadow: inset 0 0px 0 0 var(--main) !important;
 }
 
-@media (max-width: 991.98px) {
-  main.main-wrapper {
-    margin-bottom: 0 !important;
-  }
-}
-
 /* Navbar */
 .navbar {
   height: 100px;
@@ -632,7 +626,165 @@ img {
   z-index: 1;
 }
 
-/* Swiper */
+/* Navbar Hamburger */
+.navbar-hamburger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: 0;
+  outline: 0;
+  padding: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 4px 0;
+}
+@media (min-width: 1200px) {
+  .navbar-hamburger {
+    display: none;
+  }
+}
+.navbar-hamburger span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--white);
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+.navbar-hamburger span.bottom-bar {
+  width: 60%;
+}
+.navbar-hamburger.is-opened span {
+  background-color: var(--main);
+}
+.navbar-hamburger.is-opened span.bottom-bar {
+  width: 100%;
+}
+
+.mobile-controls {
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  margin-top: 30px;
+  padding: 40px 40px;
+}
+@media (min-width: 1200px) {
+  .mobile-controls {
+    display: none;
+  }
+}
+.mobile-controls ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.mobile-controls ul li a {
+  font-size: 30px;
+  color: var(--white);
+  text-decoration: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-family: var(--font-main);
+}
+.mobile-controls ul li a span {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-size: 16px;
+  line-height: 22px;
+  margin-left: 4px;
+  border-radius: 50px;
+  background-color: var(--white);
+  color: var(--black);
+  margin-right: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 500;
+}
+.mobile-controls ul li.navbar-cart i {
+  color: var(--main);
+}
+.mobile-controls ul li.navbar-search {
+  width: 100%;
+  margin-top: 30px;
+}
+.mobile-controls ul li.navbar-search form {
+  position: relative;
+}
+.mobile-controls ul li.navbar-search form input[type=text] {
+  height: 60px;
+  width: 100%;
+  background-color: var(--white);
+  border: none;
+  outline: none;
+  font-size: 16px;
+  padding: 3px 60px 3px 30px;
+}
+.mobile-controls ul li.navbar-search form a {
+  position: absolute;
+  width: 60px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  right: 0;
+  top: 0;
+  background-color: var(--main);
+  font-size: 24px;
+}
+
+.navbar-mobile-close {
+  font-family: var(--font-headers);
+  font-size: 64px;
+  color: var(--white);
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+}
+@media (min-width: 1200px) {
+  .navbar-mobile-close {
+    display: none;
+  }
+}
+
+/* Hero Slider */
 #hero-slider.swiper-container {
   width: 100%;
   height: 100vh;
@@ -923,7 +1075,7 @@ img {
   padding: 0;
 }
 .home-collection .container > .row .collection-headings {
-  background-image: url("/assets/images/feather.png");
+  background-image: url("../assets/images/feather.png");
   background-position: 0 0 !important;
   background-repeat: no-repeat;
   height: 100%;
@@ -2165,160 +2317,8 @@ footer {
   /* Opacity for IE8 and lower */
 }
 
-/* Navbar Hamburger */
-.navbar-hamburger {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 30px;
-  height: 30px;
-  background: transparent;
-  border: 0;
-  outline: 0;
-  padding: 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  padding: 4px 0;
-}
-@media (min-width: 1200px) {
-  .navbar-hamburger {
-    display: none;
-  }
-}
-.navbar-hamburger span {
-  display: block;
-  width: 100%;
-  height: 3px;
-  background-color: var(--white);
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-.navbar-hamburger span.bottom-bar {
-  width: 60%;
-}
-.navbar-hamburger.is-opened span {
-  background-color: var(--main);
-}
-.navbar-hamburger.is-opened span.bottom-bar {
-  width: 100%;
-}
-
-.mobile-controls {
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-  margin-top: 30px;
-  padding: 40px 40px;
-}
-@media (min-width: 1200px) {
-  .mobile-controls {
-    display: none;
-  }
-}
-.mobile-controls ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-.mobile-controls ul li a {
-  font-size: 30px;
-  color: var(--white);
-  text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-family: var(--font-main);
-}
-.mobile-controls ul li a span {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 16px;
-  line-height: 22px;
-  margin-left: 4px;
-  border-radius: 50px;
-  background-color: var(--white);
-  color: var(--black);
-  margin-right: 6px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-weight: 500;
-}
-.mobile-controls ul li.navbar-cart i {
-  color: var(--main);
-}
-.mobile-controls ul li.navbar-search {
-  width: 100%;
-  margin-top: 30px;
-}
-.mobile-controls ul li.navbar-search form {
-  position: relative;
-}
-.mobile-controls ul li.navbar-search form input[type=text] {
-  height: 60px;
-  width: 100%;
-  background-color: var(--white);
-  border: none;
-  outline: none;
-  font-size: 16px;
-  padding: 3px 60px 3px 30px;
-}
-.mobile-controls ul li.navbar-search form a {
-  position: absolute;
-  width: 60px;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  right: 0;
-  top: 0;
-  background-color: var(--main);
-  font-size: 24px;
-}
-
-.navbar-mobile-close {
-  font-family: var(--font-headers);
-  font-size: 64px;
-  color: var(--white);
-  border: 0;
-  padding: 0;
-  background-color: transparent;
-  position: absolute;
-  top: 50px;
-  right: 50px;
-}
-@media (min-width: 1200px) {
-  .navbar-mobile-close {
-    display: none;
+@media (max-width: 991.98px) {
+  main.main-wrapper {
+    margin-bottom: 0 !important;
   }
 }
