--- a/css/style.css
+++ b/css/style.css
@@ -2118,6 +2118,11 @@ footer {
 .footer-wrapper .footer-widget-area {
   padding: 35px 0;
 }
+@media (max-width: 767.98px) {
+  .footer-wrapper .footer-widget-area {
+    text-align: center;
+  }
+}
 .footer-wrapper .footer-widget-area .logo {
   display: inline-block;
   margin-bottom: 30px;
@@ -2132,6 +2137,11 @@ footer {
   max-width: 80%;
   margin-bottom: 50px;
 }
+@media (max-width: 767.98px) {
+  .footer-wrapper .footer-widget-area .widget-text p {
+    max-width: 100%;
+  }
+}
 
 /* Social Icons*/
 .social-icons ul {
@@ -2144,6 +2154,13 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 767.98px) {
+  .social-icons ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .social-icons ul li {
   width: 30px;
@@ -2185,6 +2202,13 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 767.98px) {
+  .widget-title h4 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .widget-title h4::after {
   content: "";
@@ -2293,12 +2317,23 @@ footer {
   visibility: hidden;
   color: var(--black);
 }
+@media (max-width: 767.98px) {
+  .back-to-top {
+    width: 52px;
+    height: 52px;
+  }
+}
 .back-to-top::before {
   font-family: "sana-fontello";
   content: "\e809";
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
   font-size: 30px;
+}
+@media (max-width: 767.98px) {
+  .back-to-top::before {
+    font-size: 20px;
+  }
 }
 .back-to-top:hover {
   background-color: var(--white);
