--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,13 @@ table {
   line-height: 1.6em;
   font-family: var(--font-main), sans-serif;
 }
-html.scroll-locked,
+@media (max-width: 1199.98px) {
+  html.scroll-locked,
 body.scroll-locked,
 div.scroll-locked,
 table.scroll-locked {
-  overflow-y: hidden;
+    overflow-y: hidden;
+  }
 }
 
 a {
@@ -245,6 +247,19 @@ img {
 }
 
 /* Navbar */
+header.header-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+header.header-wrapper.is-sticky {
+  background-color: var(--black);
+}
+
 .navbar {
   height: 100px;
   position: relative;
@@ -792,7 +807,6 @@ img {
   height: 100vh;
   height: 1000px;
   background-color: #000;
-  margin-top: -100px;
   /* Swiper slides */
 }
 @media (max-width: 767.98px) {
@@ -804,10 +818,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -815,16 +825,14 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  right: 70px;
-  left: auto;
-  width: auto;
+  bottom: 140px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
-@media (max-width: 1199.98px) {
+@media (max-width: 991.98px) {
   #hero-slider.swiper-container .swiper-pagination-bullets {
-    display: none;
+    bottom: 40px;
   }
 }
 #hero-slider.swiper-container .swiper-pagination-bullets .swiper-pagination-bullet {
@@ -845,7 +853,7 @@ img {
   font-size: 18px;
   font-family: var(--font-main);
   opacity: 1;
-  margin: 20px 0;
+  margin: 0 20px;
   position: relative;
 }
 #hero-slider.swiper-container .swiper-pagination-bullets .swiper-pagination-bullet::before {
@@ -885,38 +893,6 @@ img {
   right: 0;
   bottom: 0;
   z-index: 1;
-}
-#hero-slider.swiper-container .swiper-slide .swiper-tagline {
-  position: absolute;
-  top: 50%;
-  left: 70px;
-  color: var(--white);
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transform: rotate(270deg) translateX(-50%);
-          transform: rotate(270deg) translateX(-50%);
-  -webkit-transform-origin: 0 0;
-          transform-origin: 0 0;
-  opacity: 0.7;
-  z-index: 2;
-}
-@media (max-width: 1199.98px) {
-  #hero-slider.swiper-container .swiper-slide .swiper-tagline {
-    display: none;
-  }
-}
-#hero-slider.swiper-container .swiper-slide .swiper-tagline::before {
-  content: "";
-  display: inline-block;
-  vertical-align: baseline;
-  margin-right: 13px;
-  width: 100px;
-  height: 1px;
-  background-color: var(--main);
 }
 #hero-slider.swiper-container .swiper-slide .swiper-content {
   position: absolute;
@@ -1039,6 +1015,28 @@ img {
 #hero-slider.swiper-container .swiper-slide.swiper-slide-active .swiper-action {
   -webkit-animation-name: fadeIn;
           animation-name: fadeIn;
+}
+#hero-slider.swiper-container .social-icons {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 1;
+}
+@media (max-width: 767.98px) {
+  #hero-slider.swiper-container .social-icons {
+    display: none;
+  }
+}
+#hero-slider.swiper-container .social-icons ul {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+#hero-slider.swiper-container .social-icons ul li {
+  margin: 15px 0;
 }
 
 /* Home Collection */
@@ -1192,8 +1190,44 @@ img {
   margin-right: 15px;
   width: 80%;
 }
+.home-collection .container > .row .collection-products-wrapper {
+  padding: 0 100px;
+  position: relative;
+}
+@media (max-width: 991.98px) {
+  .home-collection .container > .row .collection-products-wrapper {
+    padding: 0 60px;
+  }
+}
+@media (max-width: 414px) {
+  .home-collection .container > .row .collection-products-wrapper {
+    padding: 0px;
+  }
+}
+.home-collection .container > .row .collection-products-wrapper .swiper-button {
+  color: var(--black);
+}
+.home-collection .container > .row .collection-products-wrapper .swiper-button.swiper-button-prev {
+  left: 40px;
+}
+@media (max-width: 991.98px) {
+  .home-collection .container > .row .collection-products-wrapper .swiper-button.swiper-button-prev {
+    left: 20px;
+  }
+}
+.home-collection .container > .row .collection-products-wrapper .swiper-button.swiper-button-next {
+  right: 40px;
+}
+@media (max-width: 991.98px) {
+  .home-collection .container > .row .collection-products-wrapper .swiper-button.swiper-button-next {
+    right: 20px;
+  }
+}
+.home-collection .container > .row .collection-products-wrapper .swiper-button::after {
+  font-size: 30px;
+}
 .home-collection .container > .row .collection-products {
-  padding: 0 60px 0 95px;
+  padding-left: 30px;
 }
 @media (max-width: 991.98px) {
   .home-collection .container > .row .collection-products {
@@ -1207,10 +1241,9 @@ img {
   }
 }
 .home-collection .container > .row .collection-products a {
-  max-width: 310px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1219,6 +1252,7 @@ img {
   position: relative;
   padding: 30px 0;
   text-decoration: none;
+  width: 100%;
 }
 @media (max-width: 991.98px) {
   .home-collection .container > .row .collection-products a {
@@ -1296,6 +1330,7 @@ img {
 .home-collection .container > .row .collection-products a span.image img {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  width: 100%;
 }
 .home-collection .container > .row .collection-products a h4 {
   display: -webkit-box;
@@ -1645,17 +1680,6 @@ img {
           align-items: center;
   min-height: 100px;
 }
-@media (max-width: 767.98px) {
-  .choose-our-services .our-services .pricing-list ul li {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-  }
-}
 .choose-our-services .our-services .pricing-list ul li .service-info .title a {
   font-family: var(--font-main);
   font-size: 18px;
@@ -1671,15 +1695,15 @@ img {
   opacity: 0.5;
   margin-bottom: 0;
 }
-.choose-our-services .our-services .pricing-list ul li .service-info .price span {
-  color: var(--main);
-  font-size: 16px;
-  font-weight: 500;
-}
 @media (max-width: 767.98px) {
-  .choose-our-services .our-services .pricing-list ul li .service-info .price {
-    margin-bottom: 15px;
+  .choose-our-services .our-services .pricing-list ul li .service-info {
+    padding-right: 30px;
   }
+}
+.choose-our-services .our-services .pricing-list ul li .service-price span {
+  color: var(--main);
+  font-size: 20px;
+  font-weight: 500;
 }
 .choose-our-services .parallax-wrapper {
   height: 100%;
@@ -2346,6 +2370,100 @@ footer {
   transition: opacity 0.3s 0s, visibility 0s 0s;
 }
 .back-to-top.is-visible {
+  /* the button becomes visible */
+  visibility: visible;
+  opacity: 1;
+  /* Opacity for Modern Browsers */
+  filter: alpha(opacity=100);
+  /* Opacity for IE8 and lower */
+}
+
+.booking-now {
+  width: 70px;
+  height: 70px;
+  position: fixed;
+  bottom: 180px;
+  right: 20px;
+  background-color: var(--main);
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  color: var(--black);
+}
+@media (max-width: 767.98px) {
+  .booking-now {
+    width: 52px;
+    height: 52px;
+    bottom: 20px;
+    right: 144px;
+  }
+}
+.booking-now:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+.booking-now.is-visible {
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+  transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+.booking-now.is-visible {
+  /* the button becomes visible */
+  visibility: visible;
+  opacity: 1;
+  /* Opacity for Modern Browsers */
+  filter: alpha(opacity=100);
+  /* Opacity for IE8 and lower */
+}
+
+.call-now {
+  width: 70px;
+  height: 70px;
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  background-color: var(--main);
+  font-size: 26px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  color: var(--black);
+}
+@media (max-width: 767.98px) {
+  .call-now {
+    width: 52px;
+    height: 52px;
+    bottom: 20px;
+    right: 82px;
+  }
+}
+.call-now:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+.call-now.is-visible {
+  -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+  transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+.call-now.is-visible {
   /* the button becomes visible */
   visibility: visible;
   opacity: 1;
