--- a/scss/_chooseOurServices.scss
+++ b/scss/_chooseOurServices.scss
@@ -114,11 +114,6 @@
           align-items: center;
           min-height: 100px;
 
-          @media (max-width: 767.98px) {
-            flex-direction: column;
-            align-items: flex-start;
-          }
-
           & .service-info {
             & .title {
               & a {
@@ -141,16 +136,16 @@
               }
             }
 
-            & .price {
-              & span {
-                color: var(--main);
-                font-size: 16px;
-                font-weight: 500;
-              }
+            @media (max-width: 767.98px) {
+              padding-right: 30px;
+            }
+          }
 
-              @media (max-width: 767.98px) {
-                margin-bottom: 15px;
-              }
+          & .service-price {
+            & span {
+              color: var(--main);
+              font-size: 20px;
+              font-weight: 500;
             }
           }
         }
