--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -308,3 +308,87 @@ footer {
     /* Opacity for IE8 and lower */
   }
 }
+
+.booking-now {
+  width: 70px;
+  height: 70px;
+  position: fixed;
+  bottom: 180px;
+  right: 20px;
+  background-color: var(--main);
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  color: var(--black);
+
+  @media (max-width: 767.98px) {
+    width: 52px;
+    height: 52px;
+    bottom: 20px;
+    right: 144px;
+  }
+
+  &:hover {
+    background-color: var(--white);
+    color: var(--black);
+  }
+
+  &.is-visible {
+    transition: opacity 0.3s 0s, visibility 0s 0s;
+  }
+
+  &.is-visible {
+    /* the button becomes visible */
+    visibility: visible;
+    opacity: 1;
+    /* Opacity for Modern Browsers */
+    filter: alpha(opacity=100);
+    /* Opacity for IE8 and lower */
+  }
+}
+
+.call-now {
+  width: 70px;
+  height: 70px;
+  position: fixed;
+  bottom: 100px;
+  right: 20px;
+  background-color: var(--main);
+  font-size: 26px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+  opacity: 0;
+  visibility: hidden;
+  color: var(--black);
+
+  @media (max-width: 767.98px) {
+    width: 52px;
+    height: 52px;
+    bottom: 20px;
+    right: 82px;
+  }
+
+  &:hover {
+    background-color: var(--white);
+    color: var(--black);
+  }
+
+  &.is-visible {
+    transition: opacity 0.3s 0s, visibility 0s 0s;
+  }
+
+  &.is-visible {
+    /* the button becomes visible */
+    visibility: visible;
+    opacity: 1;
+    /* Opacity for Modern Browsers */
+    filter: alpha(opacity=100);
+    /* Opacity for IE8 and lower */
+  }
+}
