--- a/scss/_homeCollection.scss
+++ b/scss/_homeCollection.scss
@@ -131,8 +131,45 @@
         }
       }
 
+      & .collection-products-wrapper {
+        padding: 0 100px;
+        position: relative;
+
+        @media (max-width: 991.98px) {
+          padding: 0 60px;
+        }
+
+        @media (max-width: 414px) {
+          padding: 0px;
+        }
+
+        & .swiper-button {
+          color: var(--black);
+
+          &.swiper-button-prev {
+            left: 40px;
+
+            @media (max-width: 991.98px) {
+              left: 20px;
+            }
+          }
+
+          &.swiper-button-next {
+            right: 40px;
+
+            @media (max-width: 991.98px) {
+              right: 20px;
+            }
+          }
+
+          &::after {
+            font-size: 30px;
+          }
+        }
+      }
+
       & .collection-products {
-        padding: 0 60px 0 95px;
+        padding-left: 30px;
 
         @media (max-width: 991.98px) {
           justify-content: center;
@@ -143,13 +180,13 @@
         }
 
         & a {
-          max-width: 310px;
-          display: inline-flex;
+          display: flex;
           flex-direction: column;
           margin: 0 auto;
           position: relative;
           padding: 30px 0;
           text-decoration: none;
+          width: 100%;
 
           @media (max-width: 991.98px) {
             margin-top: 30px;
@@ -229,6 +266,7 @@
 
             & img {
               transition: all 0.3s ease 0s;
+              width: 100%;
             }
           }
 
