--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,9 @@ table {
 }
 @media (max-width: 1199.98px) {
   html.scroll-locked,
-body.scroll-locked,
-div.scroll-locked,
-table.scroll-locked {
+  body.scroll-locked,
+  div.scroll-locked,
+  table.scroll-locked {
     overflow-y: hidden;
   }
 }
@@ -408,6 +408,79 @@ header.header-wrapper.is-sticky {
 .navbar .navbar-desktop ul > li.menu-item > ul.sub-menu > li:hover > a {
   background-color: var(--main);
 }
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu > li.has-sub-menu {
+  position: relative;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu > li.has-sub-menu > a::after {
+  display: inline-block;
+  font: normal normal normal 16px/1 FontAwesome;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  vertical-align: baseline;
+  content: "\f105";
+  margin-left: 10px;
+  margin-top: -1px;
+  zoom: 1;
+  filter: alpha(opacity=70);
+  -webkit-opacity: 0.7;
+  -moz-opacity: 0.7;
+  opacity: 0.7;
+  -webkit-transition: color 0.5s ease;
+  transition: color 0.5s ease;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu > li.has-sub-menu > .toggle-menu {
+  display: none;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu > li.has-sub-menu:hover > ul.sub-menu {
+  opacity: 1;
+  visibility: visible;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu ul.sub-menu {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  width: 250px;
+  margin: 15px 0 0;
+  padding: 8px 10px 8px;
+  -webkit-box-shadow: 0 0px 3px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0px 3px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  left: calc(100% + 10px);
+  top: -22px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: -1;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu ul.sub-menu > li {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu ul.sub-menu > li > a {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 18px;
+  color: var(--black);
+  font-weight: 500;
+  text-decoration: none;
+}
+.navbar .navbar-desktop ul > li.menu-item > ul.sub-menu ul.sub-menu > li:hover > a {
+  background-color: var(--main);
+}
 .navbar .navbar-desktop ul > li.menu-item.has-sub-menu > a::after {
   display: inline-block;
   font: normal normal normal 16px/1 FontAwesome;
@@ -463,7 +536,7 @@ header.header-wrapper.is-sticky {
   margin: 0 20px;
   padding: 0;
 }
-.navbar .navbar-mobile > ul > li > a {
+.navbar .navbar-mobile > ul li > a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -474,10 +547,10 @@ header.header-wrapper.is-sticky {
   color: var(--white);
   text-transform: uppercase;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu {
+.navbar .navbar-mobile > ul li.has-sub-menu {
   position: relative;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu > .toggle-menu {
+.navbar .navbar-mobile > ul li.has-sub-menu > .toggle-menu {
   width: 34px;
   height: 34px;
   border: 1px solid var(--white);
@@ -495,23 +568,23 @@ header.header-wrapper.is-sticky {
   right: 30px;
   top: 9px;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu > .toggle-menu i {
+.navbar .navbar-mobile > ul li.has-sub-menu > .toggle-menu i {
   -webkit-transition: -webkit-transform 0.3s ease-in-out 0s;
   transition: -webkit-transform 0.3s ease-in-out 0s;
   transition: transform 0.3s ease-in-out 0s;
   transition: transform 0.3s ease-in-out 0s, -webkit-transform 0.3s ease-in-out 0s;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu.menu-item-active > a {
+.navbar .navbar-mobile > ul li.has-sub-menu.menu-item-active > a {
   background-color: var(--main);
   color: var(--black);
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu .sub-menu {
+.navbar .navbar-mobile > ul li.has-sub-menu > .sub-menu {
   list-style: none;
   margin: 0;
   padding: 0;
   display: none;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu .sub-menu > li > a {
+.navbar .navbar-mobile > ul li.has-sub-menu > .sub-menu > li > a {
   font-size: 16px;
   font-weight: 600;
   color: var(--main);
@@ -524,18 +597,21 @@ header.header-wrapper.is-sticky {
       -ms-flex-align: center;
           align-items: center;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu .sub-menu > li > a::before {
+.navbar .navbar-mobile > ul li.has-sub-menu > .sub-menu > li > a::before {
   content: "\f105";
   font-family: FontAwesome;
   margin-right: 8px;
   font-size: 14px;
   font-weight: 400;
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu.is-expanded > .toggle-menu i {
+.navbar .navbar-mobile > ul li.has-sub-menu > .sub-menu .sub-menu {
+  padding-left: 20px;
+}
+.navbar .navbar-mobile > ul li.has-sub-menu.is-expanded > .toggle-menu i {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
 }
-.navbar .navbar-mobile > ul > li.has-sub-menu.is-expanded .sub-menu {
+.navbar .navbar-mobile > ul li.has-sub-menu.is-expanded > .sub-menu {
   display: block;
 }
 .navbar .navbar-icon {
